Add EditorConfig (.editorconfig) support (#57)
Resolve the nearest .editorconfig chain on open (nearest-dir-wins, up to
root=true) and apply its style to the buffer: indent_style/indent_size/
tab_width drive Tab/Enter indentation, end_of_line sets the save EOL, charset
(utf-8, utf-8-bom, latin1, utf-16le/be) round-trips on read and save,
max_line_length drives the column ruler, and trim_trailing_whitespace /
insert_final_newline are applied on save (disk bytes only — the live
document/caret/undo are untouched).

New pure, unit-tested package com.editora.editorconfig (java.base only, no new
dependency/moditect): EditorConfigProperties, EditorConfigParser,
EditorConfigGlob (* ** ? [seq] [!seq] {a,b} {n1..n2}), EditorConfigCharset,
EditorConfigTransform, and the mtime-cached EditorConfig resolver. Indenter
gains (Boolean insertSpaces, Integer size) overloads; the legacy signatures
delegate with (null,null) so the no-.editorconfig path is byte-identical
(parity-tested). EditorBuffer gains per-buffer override fields; MainController
wires applyEditorConfig / applyEditorConfigSupport, charset-aware read/write,
and the view.toggleEditorConfig palette command. StatusBar shows the active
charset + per-buffer tab size.

On by default; toggle via Settings → Editor or the "View: Toggle EditorConfig"
palette command. Local files only. Settings schema 29→30 (additive-identity).

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>